• Delete anime.min.js • Add highlight class for quick highlights • Update About Me section • Add Web Scraper Section • Add break after Alder icon and text • Add break after icons and Social text • Add background image for get in touch • Fix spacing between "Get Alder" button and "Source Code" button

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -203,12 +203,24 @@ a:focus, a:hover {
     padding-bottom: 150px;
 }
 
-.project-section {
+.alder-section {
     color: white;
     background: linear-gradient(
             rgba(0, 0, 0, 0.4),
             rgba(0, 0, 0, 0.4)
     ), url("../img/downloads-bg.jpg") no-repeat scroll center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.social-section {
+    color: white;
+    background: linear-gradient(
+            rgba(0, 0, 0, 0.4),
+            rgba(0, 0, 0, 0.4)
+    ), url("../img/get_in_touch.jpg") no-repeat scroll center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -315,6 +327,7 @@ img::-moz-selection {
     user-select: none;
 }
 
+/*Page loading bar*/
 .pace-inactive {
     display: none;
 }
@@ -327,4 +340,12 @@ img::-moz-selection {
     right: 100%;
     width: 100%;
     height: 2px;
+}
+
+.hidden {
+    display: none;
+}
+
+.highlight {
+    color: #42dca3;
 }
